--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,8 @@
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
-  --breakpoint-xl: 1200px;
+  --breakpoint-xl: 1200px; 
+  --breakpoint-xxl: 1400px;
   --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
@@ -10000,7 +10001,8 @@ p {
   font-size: 2.5rem;
   margin-top: 2.5rem;
   margin-bottom: 1rem;
- color:black;
+  /* color:black; */
+  color: #12324c;
 }
 .page-section h3.section-subheading {
   font-size: 1rem;
@@ -10522,13 +10524,16 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 ul.benefici{
- list-style-position: inside;
-  margin: 0;
-  padding: 0;
+ list-style-position: outside;
+  margin: 80;
+  padding: 80;
  
 }
 li {
- margin-left:50;
+  margin-left:0;
+  margin: 0;
+  padding: 0;
+  text-align: left;
 }
 
 
@@ -10553,3 +10558,39 @@ li {
   padding: 50px;
 }
 
+/* Customize font-size for @media */
+/* Small devices (landscape phones, 544px and up) */
+
+@media (min-width: 544px) and (max-width:768px) {  
+  .page-section h2.section-heading{
+    color:#0f6674;
+    font-size: 1.5rem;
+  }
+  .testi{
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family:utopia-std,serif;
+    font-size:  16px;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #000000;
+    text-align: justify;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
+
+@media (min-width: 768px)  and (max-width:768px) {  
+  .page-section h2.section-heading{
+    color:#0f6674;
+    font-size: 1.5rem;
+  } /*1rem = 16px*/
+  .testi{
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family:utopia-std,serif;
+    font-size:  16px;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #000000;
+    text-align: justify;
+  }
+}
