--- a/styles.css
+++ b/styles.css
@@ -10563,6 +10563,13 @@ li {
  */
 /* @media only screen and (orientation:portrait) and (min-width:321px) */
 
+@media only screen and (orientation:portrait) and (min-width:321px){
+  .testi{
+    font-size: .9rem;
+    line-height: 1.5;
+  }
+}
+
 @media only screen and (orientation:portrait) and (max-width: 575px) {
   .page-section h2.section-heading{
     /* font-size: 1.5rem; */
@@ -10589,7 +10596,7 @@ li {
 
 /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
  /*1rem = 16px*/
-@media only screen and (orientation:portrait) and (min-width: 768px)  and (max-width:991px) {  
+@media  (min-width: 768px)  and (max-width:991px) {  
   .page-section h2.section-heading{
     /* font-size: 1.5rem; */
     font-size: .9rem;
