--- a/css/styles.css
+++ b/css/styles.css
@@ -10572,10 +10572,10 @@ li {
 
 
 
-@media only screen and (orientation:portrait) and (max-width:767px) {  
+@media only screen  and (max-width:767px) {  
   .page-section h2.section-heading{
     /* font-size: 1.5rem; */
-    font-size: .9rem;
+    font-size: 1.5rem;
     line-height: 1.5;
   }
   .page-section h3.section-heading{
@@ -10590,9 +10590,10 @@ li {
 
 /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
  /*1rem = 16px*/
-@media  only screen and (orientation:portrait) and (min-width: 768px)  and (max-width:991px) {  
+@media  only screen  and (min-width: 768px)  and (max-width:991px) {  
   .page-section h2.section-heading{
-    font-size: 1.5rem;   
+    /* font-size: 1.5rem; */
+    font-size: 1.5rem;
     line-height: 1.5;
   }
   .page-section h3.section-heading{
