--- a/css/styles.css
+++ b/css/styles.css
@@ -10584,6 +10584,15 @@ li {
     font-size: .9rem;
     line-height: 1.5;
   }
+  .media{
+    float:left;
+    margin-top: 10px;
+    padding-right: 5px;
+    /* width: 100%; */
+    height: 160px;
+    border: none;
+    display:block;
+  }
 } 
 
 /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
@@ -10602,6 +10611,15 @@ li {
     font-size: .9rem;
     line-height: 1.5;
   } 
+  .media{
+    float:left;
+    margin-top: 10px;
+    padding-right: 5px;
+    /* width: 100%; */
+    height: 160px;
+    border: none;
+    display:block;
+  }
 }
 
 
